# gnome-oled-shield

./: .cursorrules  .gitignore  ALL_FIXES_FINAL.md  ARCHITECTURE.md  CONTRIBUTING.md  CRITICAL_ISSUES_FOUND.md  DEVELOPMENT.md  MODERNIZATION.md  Makefile  README.md  build-and-install.sh  extension.js  meson-postinstall.sh  meson.build  metadata.json  package-lock.json  package.json  prefs.js  run-node-tests.sh  run-tests-in-shell.sh  run-tests.sh  stylesheet.css
.cursor/rules/: self-evaluaion.mdc
.github/codeql/: codeql-config.yml
.github/codeql/custom-queries/: gnome-extension-security.ql
.github/workflows/: ci.yml  cleanup.yml  gnome45.yml  gnome46.yml  gnome47.yml  gnome48.yml
docs/fixes/: FIXES_COMPLETED.md  QUICK_FIXES.md  README.md  VERIFICATION_FIXES_APPLIED.md
docs/verification-reports/: comprehensive-fix-verification-2025-10-06.md
lib/: compatibility.js  dimming.js  displayManager.js  errors.js  eventEmitter.js  indicator.js  indicator.js.backup  metrics.js  pixelRefresh.js  pixelShift.js  resourceManager.js  signalManager.js
schemas/: org.gnome.shell.extensions.oled-care.gschema.xml
scripts/: build-and-install.sh  create-test.sh
tests/: README.md  jasmine.json  node-jasmine.json  node-test-runner.js  pixelshift-jasmine.json  run-all-tests.sh  run-environment-tests.sh  run-integration-tests.sh  run-node-tests.js  run-node-tests.sh  run-tests.js  test-modern-features.js  test-modernization.js  test-pixelshift.js  testUtils.js
tests/environment/: meson.build  testEnvironment.js
tests/environment/wayland/: input.js  monitor.js  session.js
tests/environment/wayland/gnome45/: display.test.js
tests/environment/wayland/gnome46/: display.test.js
tests/environment/wayland/gnome47/: dimming.test.js  display.test.js
tests/environment/wayland/gnome48/: display-manager.test.js  pixel-refresh.test.js
tests/environment/x11/: input.js  monitor.js  session.js
tests/environment/x11/gnome45/: display.test.js
tests/environment/x11/gnome46/: display.test.js
tests/environment/x11/gnome47/: display.test.js
tests/environment/x11/gnome48/: integration.test.js
tests/integration/: test-extension-loading.js
tests/integration/components/: test-panel-button.js
tests/integration/lib/: test-dimming.js
tests/unit/: example.spec.js  extension.spec.js  gi-module-loader.js  localTestUtils.js  test-compatibility.js  test-error-system.js  test-eventEmitter-sessions.js  test-resourceManager.js  test-signalManager.js
tests/unit/extension/: test-extension.js
tests/unit/lib/: test-dimming.js  test-utils-node.js  utils.spec.js
tests/unit/mocks/: abort.js  adw.js  clutter.js  gio.js  glib.js  global.js  gobject.js  gtk.js  main.js  meta.js  misc.js  prefs.js  timeout.js
tests/unit/node-mocks/: gi.js  loader.js
tests/unit/prefs/: test-prefs.js
