environment_sources = [
  'testEnvironment.js',
  'wayland/session.js',
  'wayland/monitor.js',
  'wayland/input.js',
  'x11/session.js',
  'x11/monitor.js',
  'x11/input.js',
]

install_data(environment_sources,
  install_dir: join_paths(get_option('datadir'), 'gnome-shell/extensions', uuid, 'tests/environment')) 